css/style.css
/* ------ CSS REST ----- */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* ----- Universal Style ----- */

body {
  font-family: 'Lora', serif;
}

a,h1,h2,h3,h4,h5,h6 {
  font-family: 'Montserrat', sans-serif;
}

a {
  text-decoration: none;
  color: inherit;
}

a.button.button-primary {
  background-color: #4D7298;
  font-size: 1.3rem;
  border: none;
}

a.button.button-primary:hover {
  background-color: #70566D;
}

p {
  text-align: justify;
}

.center {
  text-align: center;
}

img {
  max-width: 100%
}

footer {
  background-image: url(../images/dark_embroidery.png);
  color: black;
}

.rel {
  position: relative;
}

.white-text {
  color: white;
}

.blurb {
  margin: 5%;
}

.box-img {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 100%;
  width: 50%;
  position: absolute;
  left:0;
  top:0;
}

.box-img.right {
  margin-left: 50vw;
}

.row .half-width.left {
  width: 50%;
  float: left;
}

.mobile-show {
  display: none;
}

/* ------ Header Section ------ */
header {
  clear: both;
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 99999;
  transition: 1s;
}

header li {
  list-style: none;
  text-align: center;
  vertical-align: middle;
  display: inline-block;
  margin: 0 8px;
  color: #DDDDDD;
}

/* Used for the header opacity transition, added in script.js */
.active-nav {
  border-bottom: 2px solid #7D6D61;
  background-color: white;
  transition: 0.5s;
}

.light-bg {
  background-color: rgba(255, 255, 255, 0.7);
}

.light-bg.active {
  background-color: rgba(255, 255, 255, 1);;
}

header img {
  margin: 62px;
  height: 91px;
}

nav {
  display: inline-block;
  width: 70%;
  text-align: right;
  vertical-align: top;
  margin: 6vh 5%;
  position: fixed;
  right: 0;
}

nav.mobile-hide ul {
  display: inline-block;
  background-color: rgba(0,0,0,0.5);
  border-radius: 2px;
}

nav li a:hover {
  background-color: #70566D;
  color: white;
  border-radius: 10%;
}

header nav.mobile-hide ul {
  padding: 6px 5px;
  margin-right: 10px;
}

.nav-stacked {
  display: inline-block;
}

.dropdown-nav {
  position:absolute;
  right: 2vw;
  top: 2vh;
}

.dropdown-content li {
  display: block;
}

.dropdown-nav a{
  text-align: right;
  display: block
}

span.bold {
  font-weight: bold;
}

/* -----Home Page------ */

/* --Home-Above-the-fold-- */
.title-section {
  background-image: url(../images/homeimage.jpg);
  background-size: cover;
  height: 100vh;
  padding-top: 20vh;
  color: #e9e3d5;
}

.title-section .left {
  background-color: rgba(0,0,0,0.5)
}

.title-section h1 {
  font-size: 3.6rem;
  text-align: left;
  margin-bottom: 6px;
}

.title-section h2 {
  font-size: 2rem;
  margin-bottom: 35px;
  text-align: left;
}

.title-section h3 {
  display: inline-block;
  font-size: 1.6rem;
  text-align: left;
  line-height: 1.5;
  letter-spacing: 1px;
}

/* --Carousel-Section-- */

/* --Carousel-- */
.owl-dots {
  position: absolute;
  right: 10px;
  bottom: 46px;
}

.row .half-width {
  width: 50%;
  float: right;
}

.row .half-width .blurb {
  padding: 4%;
}

/* Fixed! Here's what you originally had:
 .home-section li {
    list-style: none;
    text-align: center;
  }
What I adjusted:
  - Couldn't find .home-section on the index.html page, it looks like the target text
    was inside .about-section
  - To change the styling of the list you have to target the ul/ol element, not the li
    since that's where the styling is originally applied. I'm sure you would have been
    able to do this when you found the class name error though!
Thanks Nick - I know what I did now, I had renamed this section "carousel-section", but I had failed to do so on the index.html.  I have now fixed it as the next section is called "about-section" which is why I wanted to differentiate it.
*/
.carousel-section ul {
  list-style: none;
  text-align: center;
  line-height: 1.3;
  font-size: 1.8rem;
  font-family: 'Montserrat', sans-serif;
}

/*----- TripAdvisor section ----------*/
.tripadvisor-section {
  margin: 50px 0;
}

.tripadvisor-section .section-title {
  margin-bottom: 40px;
}

.tripadvisor-branding .title h3 {
  margin-bottom: 0;
}

.tripadvisor-branding .rating {
  margin-bottom: 15px;
  font-family: 'Lora', sans-serif;
  font-weight: 400;
}

.tripadvisor-branding:hover .title h3 {
  color: #0091BD;
}

.tripadvisor-profile {
  text-align: right;
  padding-right: 30px
}

.tripadvisor-review {
  font-family: 'Lora', sans-serif;
}

.tripadvisor-review .profile-photo img {
  border-radius: 100%;
  width: 75px;
  height: 75px;
  margin-bottom: 5px;
  display: inline-block;
}

.tripadvisor-review .title h6 {
  margin-bottom: 2px;
}

.owl-carousel .owl-item .rating img {
  width: initial;
}

.tripadvisor-review .rating {
  margin-bottom: 8px;
}

.tripadvisor-review .review-link {
  margin-top: -8px;
}

.column40pc {
  width: 40%;
  float: left;
}

.column60pc {
  width: 60%;
  float: left;
}


/* -----About The Villa Section------ */

.about-section p {
  font-size: 1.7rem;
  padding: 2;
}

.about {
  background-image: url("../images/sancita-bale.png");
  left:50vw;
}

/* --The Villa Page-- */

.thevilla-section {
  background-image: url(../images/villasancita.jpg);
  background-size: cover;
  height: 100vh;
  padding-top: 20vh;
  color: #e9e3d5;
}

.thevilla-section .left {
  padding: 0 5%
}

.thevilla-section h1 {
  margin-top: 15vh;
  font-size: 3.4rem;
  text-align: left;
}

.thevilla-section h3 {
  display: inline-block;
  font-size: 1.6rem;
  text-align: left;
  margin-right: 50vw;
  line-height: 1.5;
  letter-spacing: 1px;
}

/* --Bedroom-Carousel-section-- */

.bedroom-carousel-section h2 {
  font-size: 2.3rem;
  text-align: left;
  margin-top: -2vh;
  margin-bottom: 5vh;
}

/* --Footer Section-- */
footer .row{
    border-top: 2px solid #7D6D61;
    padding: 5%
}

footer {
  padding: 1% 4%;
  clear: both;
}

.row .five.columns p{
  margin-bottom: 0;
}

footer .two.columns.fa{
  color: blue;
  font-size: 5rem;
  background-color: white;
  padding: 0 3px;
  border-radius: 10%;
}

/*---Tablet Styles----*/

@media screen and (max-width:800px) {
  .mobile-show {
    display: inline-block;
  }

  .mobile-hide {
    display: none;
  }

  header nav {
    text-align:center;
    width: 100%;
  }

  header img {
    text-align:center;
  }

  .intro {
    min-height: 50vh;
  }

  /* Collapse columns */

  .row .half-width {
    width: 100%;
  }

  .row .half-width.left {
    width: 100%
  }

}

/*---Small Tablet or Large Phone Styles----*/

@media screen and (max-width:800px) {
  .title-section .left {
    width: 96%;
    margin-left: 2%;
    margin-right: 2%;
  }
}

@media screen and (max-width:1000px) {
  .title-section .left {
    width: 60%;
  }
}

@media screen and (min-width: 801px) {
  .title-section .left {
    position: absolute;
    bottom: 5vh;
    left: 5%;
    width: 35%;
    min-width: 512px;
    padding: 30px 40px;
  }
}

*---Phone Styles----*/

@media screen and (max-width:450px){
}

